<resources>
    <string name="app_name">Instagramme</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="create_acc">Create New Account</string>
    <string name="hintEmail">E-Mail</string>
    <string name="log_out">Log out</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="hintDescription">Description...</string>
    <string name="post">Post</string>
    <string name="homeButton">Home</string>
    <string name="composeButton">Compose</string>
    <string name="profileButton">Profile</string>
</resources>
