<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_background">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white_10_transparent"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/white_60_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white_10_transparent"
        android:ems="10"
        android:fadingEdge="none"
        android:hint="@string/hintUsername"
        android:inputType="textPersonName|text"
        android:paddingStart="20dp"
        android:textColorHint="@color/white_60_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:textColorHint="@color/white_60_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white_20_transparent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_10_transparent"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button_border"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white_40_transparent"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />


    <View
        android:id="@+id/vBar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="50dp"
        android:foreground="@color/white_40_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </View>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="104dp"
        android:tint="@color/action_bar_semi_transparent_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="Already have an account?"
        android:textColor="@color/white_60_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vBar" />

    <Button
        android:id="@+id/btnStartLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:text="Log in."
        android:textAllCaps="false"
        android:textColor="@color/black_60_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/vBar" />
</android.support.constraint.ConstraintLayout>